test/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aosd-shift-reporting-backend-service
spec:
  selector:
    app: aosd-shift-reporting-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3001
