test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aosd-shift-reporting-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aosd-shift-reporting-backend
  template:
    metadata:
      labels:
        app: aosd-shift-reporting-backend
      # annotations:
        # prometheus.io/scrape: 'true'
        # prometheus.io.scheme: 'http'
        # prometheus.io/path: '/actuator/prometheus'
        # prometheus.io/port: '8080'
    spec:
      containers:
      - name: aosd-shift-reporting-backend
        imagePullPolicy: Always
        image: image-name
        envFrom:
        - configMapRef:
            name: env-config-map
        resources:
          limits:
            memory: 512Mi
            cpu: "250m"
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: gh-secret
